# MrT-Meta

./: .gitignore  .gitlab-ci.yml  .gitmodules  AddModules.md  CMakeLists.txt  Dockerfile  ModuleGuidelines.md  README.md  README.rst  device-drivers.csv  devices.csv  doxy.conf  esp32-debug.md  mrt.csv  mrt.yml  notes.rst  setup.py  unitTest.sh
.devcontainer/: devcontainer.json
.github/workflows/: github-actions.yml
Doc/: doxy.conf
Modules/Devices/RegDevice/: RegisterDevice.cpp  RegisterDevice.h
Modules/Utilities/Blob/: Blob.cpp  Blob.h  BlobTest.cpp
Modules/Utilities/Fifo/: Fifo.cpp  Fifo.h  FifoTest.cpp
Modules/Utilities/Spool/: spool.c  spool.h
Test/: CMakeLists.txt  Tester.cpp  test-results.xml
Tools/Linux/: runTests.sh  version.sh
Tools/Windows/: version.cmd
Utilities/Fifo/: Fifo.cpp  Fifo.h  FifoTest.cpp
Utilities/PolyPacket/: Packet.cpp  Packet.h  PacketItem.cpp  PacketItem.h  Protocol.h
doc/: conf.py  links.rst  modules.rst
doc/moddocs/Devices/: index.rst
doc/pages/contributing/: adding_platforms.rst  adding_utilities.rst  architecture.rst  coding_practices.rst  creating_a_module.rst
doc/pages/mrtutils/: mrt-ble.rst  mrt-config.rst  mrt-doc.rst  mrt-gen.rst  mrt-version.rst  mrtutils.rst
doc/pages/tutorial/: add-modules.rst  create-proto.md  custom-proto.md  install-mrtutils.rst  tutorial.rst
docs/: conf.py  index.rst  test.yml
docs/doxygen/: Doxyfile
docs/pages/: adding_modules.rst  examples.rst  getting_started.rst
mrt-utils/: __init__.py  modsync.py  mrt-config
mrtutils/: modsync.py  mrt-config
(+63 files in other folders)
